minijava.output
Terminals unused in grammar

   XOR
   AND
   OR
   FORSYM
   DOSYM


State 107 conflicts: 12 shift/reduce
State 136 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: MainClass ClassDecls

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    3 ClassDecl: CLASSSYM IDENT OPENBRACE VarDecls MethodDecls CLOSEBRACE
    4          | CLASSSYM IDENT EXTENDSYM IDENT OPENBRACE VarDecls MethodDecls CLOSEBRACE

    5 ClassDecls: %empty
    6           | ClassDecls ClassDecl

    7 PrimitiveTypeDecl: PrimitiveType IDENT SEMICOLON

    8 VarDecl: Type IDENT SEMICOLON

    9 VarDecls: %empty
   10         | VarDecls VarDecl

   11 MethodDecl: PUBLICSYM Type IDENT LPAREN FormalList RPAREN OPENBRACE MethodCode RETURNSYM Exp SEMICOLON CLOSEBRACE

   12 MethodCode: PrimitiveTypeDecl MethodCode
   13           | IDENT IDENT SEMICOLON MethodCode
   14           | IDENT ASSIGNMENT IDENT SEMICOLON MethodCode
   15           | NonAssignStmt Statements

   16 MethodDecls: %empty
   17            | MethodDecls MethodDecl

   18 FormalList: %empty
   19           | Type IDENT FormalRests

   20 FormalRests: %empty
   21            | FormalRests FormalRest

   22 FormalRest: COMMA Type IDENT

   23 Type: CustomType
   24     | PrimitiveType

   25 CustomType: IDENT

   26 PrimitiveType: INTSYM OPENBRKT CLOSEBRKT
   27              | BOOLEANSYM
   28              | INTSYM

   29 Assignment: IDENT ASSIGNMENT Exp SEMICOLON
   30           | IDENT OPENBRKT Exp CLOSEBRKT ASSIGNMENT Exp SEMICOLON

   31 NonAssignStmt: OPENBRACE Statements CLOSEBRACE
   32              | IFSYM LPAREN Exp RPAREN Statement ELSESYM Statement
   33              | WHILESYM LPAREN Exp RPAREN Statement
   34              | PRINTSYM LPAREN Exp RPAREN SEMICOLON

   35 Statement: NonAssignStmt
   36          | Assignment

   37 Statements: %empty
   38           | Statements Statement

   39 Exp: Exp Op Exp
   40    | Exp OPENBRKT Exp CLOSEBRKT
   41    | Exp PERIOD LENGTHSYM
   42    | Exp PERIOD IDENT LPAREN ExpList RPAREN
   43    | NUMBER
   44    | TRUESYM
   45    | FALSESYM
   46    | IDENT
   47    | THISSYM
   48    | NEWSYM INTSYM OPENBRKT Exp CLOSEBRKT
   49    | NEWSYM IDENT LPAREN RPAREN
   50    | NEG Exp
   51    | LPAREN Exp RPAREN

   52 Op: PLUS
   53   | MINUS
   54   | TIMES
   55   | SLASH
   56   | GTR
   57   | GEQ
   58   | EQ
   59   | LSS
   60   | LEQ
   61   | NEQ

   62 ExpList: Exp ExpRests

   63 ExpRests: %empty
   64         | ExpRests ExpRest

   65 ExpRest: COMMA Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
CLASSSYM (258) 2 3 4
PUBLICSYM (259) 2 11
STATICSYM (260) 2
VOIDSYM (261) 2
MAINSYM (262) 2
EXTENDSYM (263) 4
INTSYM (264) 26 28 48
BOOLEANSYM (265) 27
STRINGSYM (266) 2
LENGTHSYM (267) 41
THISSYM (268) 47
TRUESYM (269) 44
FALSESYM (270) 45
NEWSYM (271) 48 49
OPENBRKT (272) 2 26 30 40 48
CLOSEBRKT (273) 2 26 30 40 48
OPENBRACE (274) 2 3 4 11 31
CLOSEBRACE (275) 2 3 4 11 31
PLUS (276) 52
MINUS (277) 53
TIMES (278) 54
SLASH (279) 55
LPAREN (280) 2 11 32 33 34 42 49 51
RPAREN (281) 2 11 32 33 34 42 49 51
SEMICOLON (282) 7 8 11 13 14 29 30 34
COMMA (283) 22 65
PERIOD (284) 41 42
ASSIGNMENT (285) 14 29 30
EQ (286) 58
NEQ (287) 61
LSS (288) 59
GTR (289) 56
LEQ (290) 60
GEQ (291) 57
NEG (292) 50
XOR (293)
AND (294)
OR (295)
FORSYM (296)
IFSYM (297) 32
ELSESYM (298) 32
DOSYM (299)
WHILESYM (300) 33
IDENT (301) 2 3 4 7 8 11 13 14 19 22 25 29 30 42 46 49
NUMBER (302) 43
PRINTSYM (303) 34
RETURNSYM (304) 11


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
Program (51)
    on left: 1, on right: 0
MainClass (52)
    on left: 2, on right: 1
ClassDecl (53)
    on left: 3 4, on right: 6
ClassDecls (54)
    on left: 5 6, on right: 1 6
PrimitiveTypeDecl (55)
    on left: 7, on right: 12
VarDecl (56)
    on left: 8, on right: 10
VarDecls (57)
    on left: 9 10, on right: 3 4 10
MethodDecl (58)
    on left: 11, on right: 17
MethodCode (59)
    on left: 12 13 14 15, on right: 11 12 13 14
MethodDecls (60)
    on left: 16 17, on right: 3 4 17
FormalList (61)
    on left: 18 19, on right: 11
FormalRests (62)
    on left: 20 21, on right: 19 21
FormalRest (63)
    on left: 22, on right: 21
Type (64)
    on left: 23 24, on right: 8 11 19 22
CustomType (65)
    on left: 25, on right: 23
PrimitiveType (66)
    on left: 26 27 28, on right: 7 24
Assignment (67)
    on left: 29 30, on right: 36
NonAssignStmt (68)
    on left: 31 32 33 34, on right: 15 35
Statement (69)
    on left: 35 36, on right: 2 32 33 38
Statements (70)
    on left: 37 38, on right: 15 31 38
Exp (71)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51, on right: 11 29
    30 32 33 34 39 40 41 42 48 50 51 62 65
Op (72)
    on left: 52 53 54 55 56 57 58 59 60 61, on right: 39
ExpList (73)
    on left: 62, on right: 42
ExpRests (74)
    on left: 63 64, on right: 62 64
ExpRest (75)
    on left: 65, on right: 64


State 0

    0 $accept: . Program $end

    CLASSSYM  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: CLASSSYM . IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    IDENT  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass . ClassDecls

    $default  reduce using rule 5 (ClassDecls)

    ClassDecls  go to state 6


State 4

    2 MainClass: CLASSSYM IDENT . OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    OPENBRACE  shift, and go to state 7


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: MainClass ClassDecls .
    6 ClassDecls: ClassDecls . ClassDecl

    CLASSSYM  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 9


State 7

    2 MainClass: CLASSSYM IDENT OPENBRACE . PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    PUBLICSYM  shift, and go to state 10


State 8

    3 ClassDecl: CLASSSYM . IDENT OPENBRACE VarDecls MethodDecls CLOSEBRACE
    4          | CLASSSYM . IDENT EXTENDSYM IDENT OPENBRACE VarDecls MethodDecls CLOSEBRACE

    IDENT  shift, and go to state 11


State 9

    6 ClassDecls: ClassDecls ClassDecl .

    $default  reduce using rule 6 (ClassDecls)


State 10

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM . STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    STATICSYM  shift, and go to state 12


State 11

    3 ClassDecl: CLASSSYM IDENT . OPENBRACE VarDecls MethodDecls CLOSEBRACE
    4          | CLASSSYM IDENT . EXTENDSYM IDENT OPENBRACE VarDecls MethodDecls CLOSEBRACE

    EXTENDSYM  shift, and go to state 13
    OPENBRACE  shift, and go to state 14


State 12

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM . VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    VOIDSYM  shift, and go to state 15


State 13

    4 ClassDecl: CLASSSYM IDENT EXTENDSYM . IDENT OPENBRACE VarDecls MethodDecls CLOSEBRACE

    IDENT  shift, and go to state 16


State 14

    3 ClassDecl: CLASSSYM IDENT OPENBRACE . VarDecls MethodDecls CLOSEBRACE

    $default  reduce using rule 9 (VarDecls)

    VarDecls  go to state 17


State 15

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM . MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    MAINSYM  shift, and go to state 18


State 16

    4 ClassDecl: CLASSSYM IDENT EXTENDSYM IDENT . OPENBRACE VarDecls MethodDecls CLOSEBRACE

    OPENBRACE  shift, and go to state 19


State 17

    3 ClassDecl: CLASSSYM IDENT OPENBRACE VarDecls . MethodDecls CLOSEBRACE
   10 VarDecls: VarDecls . VarDecl

    INTSYM      shift, and go to state 20
    BOOLEANSYM  shift, and go to state 21
    IDENT       shift, and go to state 22

    $default  reduce using rule 16 (MethodDecls)

    VarDecl        go to state 23
    MethodDecls    go to state 24
    Type           go to state 25
    CustomType     go to state 26
    PrimitiveType  go to state 27


State 18

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM . LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    LPAREN  shift, and go to state 28


State 19

    4 ClassDecl: CLASSSYM IDENT EXTENDSYM IDENT OPENBRACE . VarDecls MethodDecls CLOSEBRACE

    $default  reduce using rule 9 (VarDecls)

    VarDecls  go to state 29


State 20

   26 PrimitiveType: INTSYM . OPENBRKT CLOSEBRKT
   28              | INTSYM .

    OPENBRKT  shift, and go to state 30

    $default  reduce using rule 28 (PrimitiveType)


State 21

   27 PrimitiveType: BOOLEANSYM .

    $default  reduce using rule 27 (PrimitiveType)


State 22

   25 CustomType: IDENT .

    $default  reduce using rule 25 (CustomType)


State 23

   10 VarDecls: VarDecls VarDecl .

    $default  reduce using rule 10 (VarDecls)


State 24

    3 ClassDecl: CLASSSYM IDENT OPENBRACE VarDecls MethodDecls . CLOSEBRACE
   17 MethodDecls: MethodDecls . MethodDecl

    PUBLICSYM   shift, and go to state 31
    CLOSEBRACE  shift, and go to state 32

    MethodDecl  go to state 33


State 25

    8 VarDecl: Type . IDENT SEMICOLON

    IDENT  shift, and go to state 34


State 26

   23 Type: CustomType .

    $default  reduce using rule 23 (Type)


State 27

   24 Type: PrimitiveType .

    $default  reduce using rule 24 (Type)


State 28

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN . STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    STRINGSYM  shift, and go to state 35


State 29

    4 ClassDecl: CLASSSYM IDENT EXTENDSYM IDENT OPENBRACE VarDecls . MethodDecls CLOSEBRACE
   10 VarDecls: VarDecls . VarDecl

    INTSYM      shift, and go to state 20
    BOOLEANSYM  shift, and go to state 21
    IDENT       shift, and go to state 22

    $default  reduce using rule 16 (MethodDecls)

    VarDecl        go to state 23
    MethodDecls    go to state 36
    Type           go to state 25
    CustomType     go to state 26
    PrimitiveType  go to state 27


State 30

   26 PrimitiveType: INTSYM OPENBRKT . CLOSEBRKT

    CLOSEBRKT  shift, and go to state 37


State 31

   11 MethodDecl: PUBLICSYM . Type IDENT LPAREN FormalList RPAREN OPENBRACE MethodCode RETURNSYM Exp SEMICOLON CLOSEBRACE

    INTSYM      shift, and go to state 20
    BOOLEANSYM  shift, and go to state 21
    IDENT       shift, and go to state 22

    Type           go to state 38
    CustomType     go to state 26
    PrimitiveType  go to state 27


State 32

    3 ClassDecl: CLASSSYM IDENT OPENBRACE VarDecls MethodDecls CLOSEBRACE .

    $default  reduce using rule 3 (ClassDecl)


State 33

   17 MethodDecls: MethodDecls MethodDecl .

    $default  reduce using rule 17 (MethodDecls)


State 34

    8 VarDecl: Type IDENT . SEMICOLON

    SEMICOLON  shift, and go to state 39


State 35

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM . OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    OPENBRKT  shift, and go to state 40


State 36

    4 ClassDecl: CLASSSYM IDENT EXTENDSYM IDENT OPENBRACE VarDecls MethodDecls . CLOSEBRACE
   17 MethodDecls: MethodDecls . MethodDecl

    PUBLICSYM   shift, and go to state 31
    CLOSEBRACE  shift, and go to state 41

    MethodDecl  go to state 33


State 37

   26 PrimitiveType: INTSYM OPENBRKT CLOSEBRKT .

    $default  reduce using rule 26 (PrimitiveType)


State 38

   11 MethodDecl: PUBLICSYM Type . IDENT LPAREN FormalList RPAREN OPENBRACE MethodCode RETURNSYM Exp SEMICOLON CLOSEBRACE

    IDENT  shift, and go to state 42


State 39

    8 VarDecl: Type IDENT SEMICOLON .

    $default  reduce using rule 8 (VarDecl)


State 40

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT . CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    CLOSEBRKT  shift, and go to state 43


State 41

    4 ClassDecl: CLASSSYM IDENT EXTENDSYM IDENT OPENBRACE VarDecls MethodDecls CLOSEBRACE .

    $default  reduce using rule 4 (ClassDecl)


State 42

   11 MethodDecl: PUBLICSYM Type IDENT . LPAREN FormalList RPAREN OPENBRACE MethodCode RETURNSYM Exp SEMICOLON CLOSEBRACE

    LPAREN  shift, and go to state 44


State 43

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT . IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    IDENT  shift, and go to state 45


State 44

   11 MethodDecl: PUBLICSYM Type IDENT LPAREN . FormalList RPAREN OPENBRACE MethodCode RETURNSYM Exp SEMICOLON CLOSEBRACE

    INTSYM      shift, and go to state 20
    BOOLEANSYM  shift, and go to state 21
    IDENT       shift, and go to state 22

    $default  reduce using rule 18 (FormalList)

    FormalList     go to state 46
    Type           go to state 47
    CustomType     go to state 26
    PrimitiveType  go to state 27


State 45

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT . RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    RPAREN  shift, and go to state 48


State 46

   11 MethodDecl: PUBLICSYM Type IDENT LPAREN FormalList . RPAREN OPENBRACE MethodCode RETURNSYM Exp SEMICOLON CLOSEBRACE

    RPAREN  shift, and go to state 49


State 47

   19 FormalList: Type . IDENT FormalRests

    IDENT  shift, and go to state 50


State 48

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN . OPENBRACE Statement CLOSEBRACE CLOSEBRACE

    OPENBRACE  shift, and go to state 51


State 49

   11 MethodDecl: PUBLICSYM Type IDENT LPAREN FormalList RPAREN . OPENBRACE MethodCode RETURNSYM Exp SEMICOLON CLOSEBRACE

    OPENBRACE  shift, and go to state 52


State 50

   19 FormalList: Type IDENT . FormalRests

    $default  reduce using rule 20 (FormalRests)

    FormalRests  go to state 53


State 51

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE . Statement CLOSEBRACE CLOSEBRACE

    OPENBRACE  shift, and go to state 54
    IFSYM      shift, and go to state 55
    WHILESYM   shift, and go to state 56
    IDENT      shift, and go to state 57
    PRINTSYM   shift, and go to state 58

    Assignment     go to state 59
    NonAssignStmt  go to state 60
    Statement      go to state 61


State 52

   11 MethodDecl: PUBLICSYM Type IDENT LPAREN FormalList RPAREN OPENBRACE . MethodCode RETURNSYM Exp SEMICOLON CLOSEBRACE

    INTSYM      shift, and go to state 20
    BOOLEANSYM  shift, and go to state 21
    OPENBRACE   shift, and go to state 54
    IFSYM       shift, and go to state 55
    WHILESYM    shift, and go to state 56
    IDENT       shift, and go to state 62
    PRINTSYM    shift, and go to state 58

    PrimitiveTypeDecl  go to state 63
    MethodCode         go to state 64
    PrimitiveType      go to state 65
    NonAssignStmt      go to state 66


State 53

   19 FormalList: Type IDENT FormalRests .
   21 FormalRests: FormalRests . FormalRest

    COMMA  shift, and go to state 67

    $default  reduce using rule 19 (FormalList)

    FormalRest  go to state 68


State 54

   31 NonAssignStmt: OPENBRACE . Statements CLOSEBRACE

    $default  reduce using rule 37 (Statements)

    Statements  go to state 69


State 55

   32 NonAssignStmt: IFSYM . LPAREN Exp RPAREN Statement ELSESYM Statement

    LPAREN  shift, and go to state 70


State 56

   33 NonAssignStmt: WHILESYM . LPAREN Exp RPAREN Statement

    LPAREN  shift, and go to state 71


State 57

   29 Assignment: IDENT . ASSIGNMENT Exp SEMICOLON
   30           | IDENT . OPENBRKT Exp CLOSEBRKT ASSIGNMENT Exp SEMICOLON

    OPENBRKT    shift, and go to state 72
    ASSIGNMENT  shift, and go to state 73


State 58

   34 NonAssignStmt: PRINTSYM . LPAREN Exp RPAREN SEMICOLON

    LPAREN  shift, and go to state 74


State 59

   36 Statement: Assignment .

    $default  reduce using rule 36 (Statement)


State 60

   35 Statement: NonAssignStmt .

    $default  reduce using rule 35 (Statement)


State 61

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement . CLOSEBRACE CLOSEBRACE

    CLOSEBRACE  shift, and go to state 75


State 62

   13 MethodCode: IDENT . IDENT SEMICOLON MethodCode
   14           | IDENT . ASSIGNMENT IDENT SEMICOLON MethodCode

    ASSIGNMENT  shift, and go to state 76
    IDENT       shift, and go to state 77


State 63

   12 MethodCode: PrimitiveTypeDecl . MethodCode

    INTSYM      shift, and go to state 20
    BOOLEANSYM  shift, and go to state 21
    OPENBRACE   shift, and go to state 54
    IFSYM       shift, and go to state 55
    WHILESYM    shift, and go to state 56
    IDENT       shift, and go to state 62
    PRINTSYM    shift, and go to state 58

    PrimitiveTypeDecl  go to state 63
    MethodCode         go to state 78
    PrimitiveType      go to state 65
    NonAssignStmt      go to state 66


State 64

   11 MethodDecl: PUBLICSYM Type IDENT LPAREN FormalList RPAREN OPENBRACE MethodCode . RETURNSYM Exp SEMICOLON CLOSEBRACE

    RETURNSYM  shift, and go to state 79


State 65

    7 PrimitiveTypeDecl: PrimitiveType . IDENT SEMICOLON

    IDENT  shift, and go to state 80


State 66

   15 MethodCode: NonAssignStmt . Statements

    $default  reduce using rule 37 (Statements)

    Statements  go to state 81


State 67

   22 FormalRest: COMMA . Type IDENT

    INTSYM      shift, and go to state 20
    BOOLEANSYM  shift, and go to state 21
    IDENT       shift, and go to state 22

    Type           go to state 82
    CustomType     go to state 26
    PrimitiveType  go to state 27


State 68

   21 FormalRests: FormalRests FormalRest .

    $default  reduce using rule 21 (FormalRests)


State 69

   31 NonAssignStmt: OPENBRACE Statements . CLOSEBRACE
   38 Statements: Statements . Statement

    OPENBRACE   shift, and go to state 54
    CLOSEBRACE  shift, and go to state 83
    IFSYM       shift, and go to state 55
    WHILESYM    shift, and go to state 56
    IDENT       shift, and go to state 57
    PRINTSYM    shift, and go to state 58

    Assignment     go to state 59
    NonAssignStmt  go to state 60
    Statement      go to state 84


State 70

   32 NonAssignStmt: IFSYM LPAREN . Exp RPAREN Statement ELSESYM Statement

    THISSYM   shift, and go to state 85
    TRUESYM   shift, and go to state 86
    FALSESYM  shift, and go to state 87
    NEWSYM    shift, and go to state 88
    LPAREN    shift, and go to state 89
    NEG       shift, and go to state 90
    IDENT     shift, and go to state 91
    NUMBER    shift, and go to state 92

    Exp  go to state 93


State 71

   33 NonAssignStmt: WHILESYM LPAREN . Exp RPAREN Statement

    THISSYM   shift, and go to state 85
    TRUESYM   shift, and go to state 86
    FALSESYM  shift, and go to state 87
    NEWSYM    shift, and go to state 88
    LPAREN    shift, and go to state 89
    NEG       shift, and go to state 90
    IDENT     shift, and go to state 91
    NUMBER    shift, and go to state 92

    Exp  go to state 94


State 72

   30 Assignment: IDENT OPENBRKT . Exp CLOSEBRKT ASSIGNMENT Exp SEMICOLON

    THISSYM   shift, and go to state 85
    TRUESYM   shift, and go to state 86
    FALSESYM  shift, and go to state 87
    NEWSYM    shift, and go to state 88
    LPAREN    shift, and go to state 89
    NEG       shift, and go to state 90
    IDENT     shift, and go to state 91
    NUMBER    shift, and go to state 92

    Exp  go to state 95


State 73

   29 Assignment: IDENT ASSIGNMENT . Exp SEMICOLON

    THISSYM   shift, and go to state 85
    TRUESYM   shift, and go to state 86
    FALSESYM  shift, and go to state 87
    NEWSYM    shift, and go to state 88
    LPAREN    shift, and go to state 89
    NEG       shift, and go to state 90
    IDENT     shift, and go to state 91
    NUMBER    shift, and go to state 92

    Exp  go to state 96


State 74

   34 NonAssignStmt: PRINTSYM LPAREN . Exp RPAREN SEMICOLON

    THISSYM   shift, and go to state 85
    TRUESYM   shift, and go to state 86
    FALSESYM  shift, and go to state 87
    NEWSYM    shift, and go to state 88
    LPAREN    shift, and go to state 89
    NEG       shift, and go to state 90
    IDENT     shift, and go to state 91
    NUMBER    shift, and go to state 92

    Exp  go to state 97


State 75

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE . CLOSEBRACE

    CLOSEBRACE  shift, and go to state 98


State 76

   14 MethodCode: IDENT ASSIGNMENT . IDENT SEMICOLON MethodCode

    IDENT  shift, and go to state 99


State 77

   13 MethodCode: IDENT IDENT . SEMICOLON MethodCode

    SEMICOLON  shift, and go to state 100


State 78

   12 MethodCode: PrimitiveTypeDecl MethodCode .

    $default  reduce using rule 12 (MethodCode)


State 79

   11 MethodDecl: PUBLICSYM Type IDENT LPAREN FormalList RPAREN OPENBRACE MethodCode RETURNSYM . Exp SEMICOLON CLOSEBRACE

    THISSYM   shift, and go to state 85
    TRUESYM   shift, and go to state 86
    FALSESYM  shift, and go to state 87
    NEWSYM    shift, and go to state 88
    LPAREN    shift, and go to state 89
    NEG       shift, and go to state 90
    IDENT     shift, and go to state 91
    NUMBER    shift, and go to state 92

    Exp  go to state 101


State 80

    7 PrimitiveTypeDecl: PrimitiveType IDENT . SEMICOLON

    SEMICOLON  shift, and go to state 102


State 81

   15 MethodCode: NonAssignStmt Statements .
   38 Statements: Statements . Statement

    OPENBRACE  shift, and go to state 54
    IFSYM      shift, and go to state 55
    WHILESYM   shift, and go to state 56
    IDENT      shift, and go to state 57
    PRINTSYM   shift, and go to state 58

    $default  reduce using rule 15 (MethodCode)

    Assignment     go to state 59
    NonAssignStmt  go to state 60
    Statement      go to state 84


State 82

   22 FormalRest: COMMA Type . IDENT

    IDENT  shift, and go to state 103


State 83

   31 NonAssignStmt: OPENBRACE Statements CLOSEBRACE .

    $default  reduce using rule 31 (NonAssignStmt)


State 84

   38 Statements: Statements Statement .

    $default  reduce using rule 38 (Statements)


State 85

   47 Exp: THISSYM .

    $default  reduce using rule 47 (Exp)


State 86

   44 Exp: TRUESYM .

    $default  reduce using rule 44 (Exp)


State 87

   45 Exp: FALSESYM .

    $default  reduce using rule 45 (Exp)


State 88

   48 Exp: NEWSYM . INTSYM OPENBRKT Exp CLOSEBRKT
   49    | NEWSYM . IDENT LPAREN RPAREN

    INTSYM  shift, and go to state 104
    IDENT   shift, and go to state 105


State 89

   51 Exp: LPAREN . Exp RPAREN

    THISSYM   shift, and go to state 85
    TRUESYM   shift, and go to state 86
    FALSESYM  shift, and go to state 87
    NEWSYM    shift, and go to state 88
    LPAREN    shift, and go to state 89
    NEG       shift, and go to state 90
    IDENT     shift, and go to state 91
    NUMBER    shift, and go to state 92

    Exp  go to state 106


State 90

   50 Exp: NEG . Exp

    THISSYM   shift, and go to state 85
    TRUESYM   shift, and go to state 86
    FALSESYM  shift, and go to state 87
    NEWSYM    shift, and go to state 88
    LPAREN    shift, and go to state 89
    NEG       shift, and go to state 90
    IDENT     shift, and go to state 91
    NUMBER    shift, and go to state 92

    Exp  go to state 107


State 91

   46 Exp: IDENT .

    $default  reduce using rule 46 (Exp)


State 92

   43 Exp: NUMBER .

    $default  reduce using rule 43 (Exp)


State 93

   32 NonAssignStmt: IFSYM LPAREN Exp . RPAREN Statement ELSESYM Statement
   39 Exp: Exp . Op Exp
   40    | Exp . OPENBRKT Exp CLOSEBRKT
   41    | Exp . PERIOD LENGTHSYM
   42    | Exp . PERIOD IDENT LPAREN ExpList RPAREN

    OPENBRKT  shift, and go to state 108
    PLUS      shift, and go to state 109
    MINUS     shift, and go to state 110
    TIMES     shift, and go to state 111
    SLASH     shift, and go to state 112
    RPAREN    shift, and go to state 113
    PERIOD    shift, and go to state 114
    EQ        shift, and go to state 115
    NEQ       shift, and go to state 116
    LSS       shift, and go to state 117
    GTR       shift, and go to state 118
    LEQ       shift, and go to state 119
    GEQ       shift, and go to state 120

    Op  go to state 121


State 94

   33 NonAssignStmt: WHILESYM LPAREN Exp . RPAREN Statement
   39 Exp: Exp . Op Exp
   40    | Exp . OPENBRKT Exp CLOSEBRKT
   41    | Exp . PERIOD LENGTHSYM
   42    | Exp . PERIOD IDENT LPAREN ExpList RPAREN

    OPENBRKT  shift, and go to state 108
    PLUS      shift, and go to state 109
    MINUS     shift, and go to state 110
    TIMES     shift, and go to state 111
    SLASH     shift, and go to state 112
    RPAREN    shift, and go to state 122
    PERIOD    shift, and go to state 114
    EQ        shift, and go to state 115
    NEQ       shift, and go to state 116
    LSS       shift, and go to state 117
    GTR       shift, and go to state 118
    LEQ       shift, and go to state 119
    GEQ       shift, and go to state 120

    Op  go to state 121


State 95

   30 Assignment: IDENT OPENBRKT Exp . CLOSEBRKT ASSIGNMENT Exp SEMICOLON
   39 Exp: Exp . Op Exp
   40    | Exp . OPENBRKT Exp CLOSEBRKT
   41    | Exp . PERIOD LENGTHSYM
   42    | Exp . PERIOD IDENT LPAREN ExpList RPAREN

    OPENBRKT   shift, and go to state 108
    CLOSEBRKT  shift, and go to state 123
    PLUS       shift, and go to state 109
    MINUS      shift, and go to state 110
    TIMES      shift, and go to state 111
    SLASH      shift, and go to state 112
    PERIOD     shift, and go to state 114
    EQ         shift, and go to state 115
    NEQ        shift, and go to state 116
    LSS        shift, and go to state 117
    GTR        shift, and go to state 118
    LEQ        shift, and go to state 119
    GEQ        shift, and go to state 120

    Op  go to state 121


State 96

   29 Assignment: IDENT ASSIGNMENT Exp . SEMICOLON
   39 Exp: Exp . Op Exp
   40    | Exp . OPENBRKT Exp CLOSEBRKT
   41    | Exp . PERIOD LENGTHSYM
   42    | Exp . PERIOD IDENT LPAREN ExpList RPAREN

    OPENBRKT   shift, and go to state 108
    PLUS       shift, and go to state 109
    MINUS      shift, and go to state 110
    TIMES      shift, and go to state 111
    SLASH      shift, and go to state 112
    SEMICOLON  shift, and go to state 124
    PERIOD     shift, and go to state 114
    EQ         shift, and go to state 115
    NEQ        shift, and go to state 116
    LSS        shift, and go to state 117
    GTR        shift, and go to state 118
    LEQ        shift, and go to state 119
    GEQ        shift, and go to state 120

    Op  go to state 121


State 97

   34 NonAssignStmt: PRINTSYM LPAREN Exp . RPAREN SEMICOLON
   39 Exp: Exp . Op Exp
   40    | Exp . OPENBRKT Exp CLOSEBRKT
   41    | Exp . PERIOD LENGTHSYM
   42    | Exp . PERIOD IDENT LPAREN ExpList RPAREN

    OPENBRKT  shift, and go to state 108
    PLUS      shift, and go to state 109
    MINUS     shift, and go to state 110
    TIMES     shift, and go to state 111
    SLASH     shift, and go to state 112
    RPAREN    shift, and go to state 125
    PERIOD    shift, and go to state 114
    EQ        shift, and go to state 115
    NEQ       shift, and go to state 116
    LSS       shift, and go to state 117
    GTR       shift, and go to state 118
    LEQ       shift, and go to state 119
    GEQ       shift, and go to state 120

    Op  go to state 121


State 98

    2 MainClass: CLASSSYM IDENT OPENBRACE PUBLICSYM STATICSYM VOIDSYM MAINSYM LPAREN STRINGSYM OPENBRKT CLOSEBRKT IDENT RPAREN OPENBRACE Statement CLOSEBRACE CLOSEBRACE .

    $default  reduce using rule 2 (MainClass)


State 99

   14 MethodCode: IDENT ASSIGNMENT IDENT . SEMICOLON MethodCode

    SEMICOLON  shift, and go to state 126


State 100

   13 MethodCode: IDENT IDENT SEMICOLON . MethodCode

    INTSYM      shift, and go to state 20
    BOOLEANSYM  shift, and go to state 21
    OPENBRACE   shift, and go to state 54
    IFSYM       shift, and go to state 55
    WHILESYM    shift, and go to state 56
    IDENT       shift, and go to state 62
    PRINTSYM    shift, and go to state 58

    PrimitiveTypeDecl  go to state 63
    MethodCode         go to state 127
    PrimitiveType      go to state 65
    NonAssignStmt      go to state 66


State 101
